--- a/opera.html
+++ b/opera.html
@@ -11,8 +11,8 @@
 <body>
     <h1>Swathi Nuli Productions LTD</h1>
     <h3>The Yeoman of the Guard </h3>
-    <h5>Act II</h5>
-    <h5>SCENE.— The same— Moonlight.Two days have elapsed.
+    <h5>Act II <br>
+   SCENE.— The same— Moonlight.Two days have elapsed.
         WOMEN and YEOMEN of the Guard discovered.
         No. 13.  <br>
         Night has spread her pall once more
