modified opera at chorus

--- a/opera.html
+++ b/opera.html
@@ -102,6 +102,7 @@
 
     [Enter CHORUS excitedly
 
+    <p>
     CHORUS Now what can that have been—
     A shot so late at night,
     Enough to cause a fright!
@@ -112,7 +113,10 @@
     What are we to expect?
     What danger is at hand?
     Let us understand
-    What danger is at hand!<br><br>
+    What danger is at hand!
+    </p>
+
+    <br><br>
 
     [Enter FAIRFAX and TWO YEOMEN from Tower in great
     excitement.
