modified opera with song and chorus

--- a/opera.html
+++ b/opera.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S555089 Assignment 4</title>
+    <link rel="stylesheet" href="gs.css">
 </head>
 
 <body>
@@ -16,13 +17,13 @@
         WOMEN and YEOMEN of the Guard discovered.
         No. 13. <br>
         Night has spread her pall once more
-        (CHORUS AND SOLO)
+        <p class="direction">(CHORUS AND SOLO)</p>
         People, Yeomen, and Dame Carruthers
     </h5> <br>
 
     [Enter DAME CARRUTHERS and KATE
 
-    <h6>DAME</h6>
+    <h6 class="DAME">DAME</h6>
 
     Warders are ye?
     Whom do ye ward?
@@ -41,8 +42,8 @@
     [Enter JACK POINT, in low spirits, reading from a huge
     volume
 
-    <h6>POINT</h6>
-    <p>[reads] </p>"The Merrie Jestes of Hugh Ambrose, No.
+    <h6 class="POINT">POINT</h6>
+    <p class="direction">[reads] </p>"The Merrie Jestes of Hugh Ambrose, No.
     7863.The Poor Wit and the Rich Councillor. A certayne
     poor wit, being an-hungered, did meet a well-fed
     councillor.'Marry, fool,' quothe the councillor,
@@ -58,12 +59,12 @@
 
     [Enter WILFRED, also in low spirits
 
-    <h6>WILFRED</h6>
-    <p>[sighing]</p> Ah, Master Point! <br><br>
+    <h6 class="WILFRED">WILFRED</h6>
+    <p class="direction">[sighing]</p> Ah, Master Point! <br><br>
 
     [Enter FAIRFAX
 
-    <h6>FAIRFAX</h6> Two days gone, and no news of poor Fairfax. The dolts!
+    <h6 class="FAIRFAX">FAIRFAX</h6> Two days gone, and no news of poor Fairfax. The dolts!
     They seek him everywhere save within a dozen yards of
     his dungeon. So I am free! Free, but for the cursed
     haste with which I hurried headlong into the bonds of
@@ -77,33 +78,34 @@
     From the one I broke readily enough— how to break the
     other!
     No. 16. Free from his fetters grim
-    <p>(BALLAD)</p>
+    <p class="direction">(BALLAD)</p>
     Fairfax
 
     <br><br>
     [Enter SERGEANT MERYLL
 
-    <h6>FAIRFAX</h6> Well, Sergeant Meryll, and how fares thy pretty
+    <h6 class="FAIRFAX">FAIRFAX</h6> Well, Sergeant Meryll, and how fares thy pretty
     charge,Elsie Maynard?
 
-    <h6>MERYLL</h6> Well enough, sir. She is quite strong again, and
+    <h6 class="MERYLL">MERYLL</h6> Well enough, sir. She is quite strong again, and
     leaves us to-night.
 
-    <p>[Enter ELSIE</p>
+    [Enter ELSIE
 
-    <h6>FAIRFAX</h6> Mistress Elsie!
+    <h6 class="FAIRFAX">FAIRFAX</h6> Mistress Elsie!
 
-    <h6>ELSIE</h6> Master Leonard!
+    <h6 class="ELSIE">ELSIE</h6> Master Leonard!
 
-    <h6>FAIRFAX</h6> So thou leavest us to-night?
+    <h6 class="FAIRFAX">FAIRFAX</h6> So thou leavest us to-night?
 
-    <h6>ELSIE</h6> Yes. Master Leonard. I have been kindly tended, and I
-    almost fear I am loth to go.
+    <h6 class="ELSIE">ELSIE</h6> Yes. Master Leonard. I have been kindly tended, and I
+    almost fear I am loth to go. <br><br>
 
-    [Enter CHORUS excitedly
+    [Enter CHORUS excitedly <br><br>
 
-    <p>
-    CHORUS Now what can that have been—
+    CHORUS
+    <p class="CHORUS">
+     Now what can that have been—
     A shot so late at night,
     Enough to cause a fright!
     What can the portent mean?
@@ -121,7 +123,7 @@
     [Enter FAIRFAX and TWO YEOMEN from Tower in great
     excitement.
 
-    <h6>FAIRFAX</h6> My lord! I know not how to tell
+    <h6 class="FAIRFAX">FAIRFAX</h6> My lord! I know not how to tell
     The news I bear!
     I and my comrades sought the pris'ner's cell—
     He is not there! <br>
@@ -129,10 +131,10 @@
 
 
 
-    <p>(DUET)</p>
+    <p class="direction">(DUET)</p>
     Dame Carruthers and Sergeant Meryll
 
-    <h6>DAME</h6>
+    <h6 class="DAME">DAME</h6>
     <p>Rapture, rapture
         When love's votary,
         Flushed with capture,
@@ -146,7 +148,7 @@
         Reigns frivolity!
         Rapture, rapture!</p>
 
-    <h6>MERYLL</h6>
+    <h6 class="MERYLL">MERYLL</h6>
     <p>
         Doleful, doleful!
         When humanity
@@ -162,7 +164,7 @@
         Doleful, doleful!
     </p>
 
-    <h6>DAME</h6>
+    <h6 class="DAME">DAME</h6>
     <p>
         Joyful, joyful!
         When virginity
@@ -178,7 +180,7 @@
         Joyful, joyful!
     </p>
 
-    <h6>MERYLL</h6>
+    <h6 class="MERYLL">MERYLL</h6>
     <p>
         Ghastly, ghastly!
         When man, sorrowful,
@@ -190,36 +192,39 @@
         Ghastly, ghastly!
     </p>
 
-    <h6>DAME</h6>
+    <h6 class="DAME">DAME</h6>
     <p>Joyful, joyful!</p>
 
-    <h6>MERYLL</h6>
+    <h6 class="MERYLL">MERYLL</h6>
     <p>Ghastly, ghastly!</p>
 
-    <h6>DAME</h6>
+    <h6 class="DAME">DAME</h6>
     <p>Joyful, joyful!</p>
 
-    <p>(SONG)</p>
+    <p class="direction">(SONG)</p>
 
 
-    <h6>POINT</h6> Oh! a private buffoon is a light-hearted loon,
-    If you listen to popular rumour;
-    From morning to night he's so joyous and bright,
-    And he bubbles with wit and good humour!
-    He's so quaint and so terse,
-    Both in prose and in verse;
-    Yet though people forgive his transgression,
-    There are one or two rules that all family fools
-    Must observe, if they love their profession.
-    There are one or two rules,
-    Half-a-dozen, maybe,
-    That all family fools,
-    Of whatever degree,
-    Must observe if they love their profession.
+    <h6 class="POINT">POINT</h6> 
+    <p class="song">
+        Oh! a private buffoon is a light-hearted loon, <br>
+    If you listen to popular rumour; <br>
+    From morning to night he's so joyous and bright,<br>
+    And he bubbles with wit and good humour!<br>
+    He's so quaint and so terse,<br>
+    Both in prose and in verse;<br>
+    Yet though people forgive his transgression,<br>
+    There are one or two rules that all family fools<br>
+    Must observe, if they love their profession.<br>
+    There are one or two rules,<br>
+    Half-a-dozen, maybe,<br>
+    That all family fools,<br>
+    Of whatever degree,<br>
+    Must observe if they love their profession.<br>
+    </p>
 
 
-    <h6>ELSIE</h6>
-    <p>[aside] </p>Leonard, my loved one— come to me.
+    <h6 class="ELSIE">ELSIE</h6>
+    <p class="direction">[aside] </p>Leonard, my loved one— come to me.
     They bear me hence away!
     But though they take me far from thee,
     My heart is thine for aye!
@@ -230,8 +235,8 @@
     Is thine, is thine, my own,
     Is thine, for aye!
 
-    <h6>ELSIE</h6>
-    <p>[To FAIRFAX]</p> Sir, I obey!
+    <h6 class="ELSIE">ELSIE</h6>
+    <p class="direction">[To FAIRFAX]</p> Sir, I obey!
     I am thy bride;
     But ere the fatal hour
     I said the say
