added class to html

--- a/opera.html
+++ b/opera.html
@@ -23,7 +23,7 @@
 
     [Enter DAME CARRUTHERS and KATE
 
-    <h6 class="DAME">DAME</h6>
+    <h6 class="DAME name">DAME</h6>
 
     Warders are ye?
     Whom do ye ward?
@@ -42,7 +42,7 @@
     [Enter JACK POINT, in low spirits, reading from a huge
     volume
 
-    <h6 class="POINT">POINT</h6>
+    <h6 class="POINT name">POINT</h6>
     <p class="direction">[reads] </p>"The Merrie Jestes of Hugh Ambrose, No.
     7863.The Poor Wit and the Rich Councillor. A certayne
     poor wit, being an-hungered, did meet a well-fed
@@ -59,12 +59,12 @@
 
     [Enter WILFRED, also in low spirits
 
-    <h6 class="WILFRED">WILFRED</h6>
+    <h6 class="WILFRED name">WILFRED</h6>
     <p class="direction">[sighing]</p> Ah, Master Point! <br><br>
 
     [Enter FAIRFAX
 
-    <h6 class="FAIRFAX">FAIRFAX</h6> Two days gone, and no news of poor Fairfax. The dolts!
+    <h6 class="FAIRFAX name">FAIRFAX</h6> Two days gone, and no news of poor Fairfax. The dolts!
     They seek him everywhere save within a dozen yards of
     his dungeon. So I am free! Free, but for the cursed
     haste with which I hurried headlong into the bonds of
@@ -84,21 +84,21 @@
     <br><br>
     [Enter SERGEANT MERYLL
 
-    <h6 class="FAIRFAX">FAIRFAX</h6> Well, Sergeant Meryll, and how fares thy pretty
+    <h6 class="FAIRFAX name">FAIRFAX</h6> Well, Sergeant Meryll, and how fares thy pretty
     charge,Elsie Maynard?
 
-    <h6 class="MERYLL">MERYLL</h6> Well enough, sir. She is quite strong again, and
+    <h6 class="MERYLL name">MERYLL</h6> Well enough, sir. She is quite strong again, and
     leaves us to-night.
 
     [Enter ELSIE
 
-    <h6 class="FAIRFAX">FAIRFAX</h6> Mistress Elsie!
+    <h6 class="FAIRFAX name">FAIRFAX</h6> Mistress Elsie!
 
-    <h6 class="ELSIE">ELSIE</h6> Master Leonard!
+    <h6 class="ELSIE name">ELSIE</h6> Master Leonard!
 
-    <h6 class="FAIRFAX">FAIRFAX</h6> So thou leavest us to-night?
+    <h6 class="FAIRFAX name">FAIRFAX</h6> So thou leavest us to-night?
 
-    <h6 class="ELSIE">ELSIE</h6> Yes. Master Leonard. I have been kindly tended, and I
+    <h6 class="ELSIE name">ELSIE</h6> Yes. Master Leonard. I have been kindly tended, and I
     almost fear I am loth to go. <br><br>
 
     [Enter CHORUS excitedly <br><br>
@@ -123,7 +123,7 @@
     [Enter FAIRFAX and TWO YEOMEN from Tower in great
     excitement.
 
-    <h6 class="FAIRFAX">FAIRFAX</h6> My lord! I know not how to tell
+    <h6 class="FAIRFAX name">FAIRFAX</h6> My lord! I know not how to tell
     The news I bear!
     I and my comrades sought the pris'ner's cell—
     He is not there! <br>
@@ -134,7 +134,7 @@
     <p class="direction">(DUET)</p>
     Dame Carruthers and Sergeant Meryll
 
-    <h6 class="DAME">DAME</h6>
+    <h6 class="DAME name">DAME</h6>
     <p>Rapture, rapture
         When love's votary,
         Flushed with capture,
@@ -148,7 +148,7 @@
         Reigns frivolity!
         Rapture, rapture!</p>
 
-    <h6 class="MERYLL">MERYLL</h6>
+    <h6 class="MERYLL name">MERYLL</h6>
     <p>
         Doleful, doleful!
         When humanity
@@ -164,7 +164,7 @@
         Doleful, doleful!
     </p>
 
-    <h6 class="DAME">DAME</h6>
+    <h6 class="DAME name">DAME</h6>
     <p>
         Joyful, joyful!
         When virginity
@@ -180,7 +180,7 @@
         Joyful, joyful!
     </p>
 
-    <h6 class="MERYLL">MERYLL</h6>
+    <h6 class="MERYLL name">MERYLL</h6>
     <p>
         Ghastly, ghastly!
         When man, sorrowful,
@@ -192,19 +192,19 @@
         Ghastly, ghastly!
     </p>
 
-    <h6 class="DAME">DAME</h6>
+    <h6 class="DAME name">DAME</h6>
     <p>Joyful, joyful!</p>
 
-    <h6 class="MERYLL">MERYLL</h6>
+    <h6 class="MERYLL name">MERYLL</h6>
     <p>Ghastly, ghastly!</p>
 
-    <h6 class="DAME">DAME</h6>
+    <h6 class="DAME name">DAME</h6>
     <p>Joyful, joyful!</p>
 
     <p class="direction">(SONG)</p>
 
 
-    <h6 class="POINT">POINT</h6> 
+    <h6 class="POINT name">POINT</h6> 
     <p class="song">
         Oh! a private buffoon is a light-hearted loon, <br>
     If you listen to popular rumour; <br>
@@ -223,7 +223,7 @@
     </p>
 
 
-    <h6 class="ELSIE">ELSIE</h6>
+    <h6 class="ELSIE name">ELSIE</h6>
     <p class="direction">[aside] </p>Leonard, my loved one— come to me.
     They bear me hence away!
     But though they take me far from thee,
@@ -235,7 +235,7 @@
     Is thine, is thine, my own,
     Is thine, for aye!
 
-    <h6 class="ELSIE">ELSIE</h6>
+    <h6 class="ELSIE name">ELSIE</h6>
     <p class="direction">[To FAIRFAX]</p> Sir, I obey!
     I am thy bride;
     But ere the fatal hour
