added table and styles

--- a/opera.html
+++ b/opera.html
@@ -243,31 +243,33 @@
     That placed me in thy pow'r
     Would I had died!
     Sir, I obey!
-    I am thy bride!
-    <!-- <table>
+    I am thy bride! <br><br>
+    <table>
             <thead>
                 <tr>
                     <th>Character</th>
-                </tr>
-                <tr>
                     <th>Singer</th>
-                </tr>
-                <tr>
                     <th>Offer</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
+                    <td>7 Rings</td>
+                    <td>Ariana Grande</td>
+                    <td>15 Million Dollars</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Tik Tok</td>
+                    <td>Kesha</td>
+                    <td>10 Million Dollars</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Stay</td>
+                    <td>Kid Laroi</td>
+                    <td>5 Million Dollars</td>
                 </tr>
             </tbody>
-        </table> -->
+        </table> 
 
 </body>
 
