added a new page opera2

--- a/opera.html
+++ b/opera.html
@@ -269,7 +269,9 @@
                     <td>5 Million Dollars</td>
                 </tr>
             </tbody>
-        </table> 
+        </table> <br>
+
+        <a href="opera2.html">Opera2.html</a>
 
 </body>
 
