--- a/opera2.html
+++ b/opera2.html
@@ -41,6 +41,33 @@
     Is thine, is thine, my own,
     Is thine, for aye! <br>
 
+    <table>
+        <thead>
+            <tr>
+                <th>Character</th>
+                <th>Singer</th>
+                <th>Offer</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Baby</td>
+                <td>Justin Bieber</td>
+                <td>15 Million Dollars</td>
+            </tr>
+            <tr>
+                <td>Perfect</td>
+                <td>Ed Sheeran</td>
+                <td>10 Million Dollars</td>
+            </tr>
+            <tr>
+                <td>Cheap Thrills</td>
+                <td>Sia</td>
+                <td>5 Million Dollars</td>
+            </tr>
+        </tbody>
+    </table> <br>
+
     <a href="opera.html">Opera.html</a>
 
 
