--- a/opera.html
+++ b/opera.html
@@ -272,7 +272,19 @@
             </tbody>
         </table> <br>
 
-        <a href="opera2.html">Opera2.html</a>
+        <a href="opera2.html">Opera2.html</a> <br><br>
+
+        <ul>
+            <li><a href="opera.html"><i class="material-icons">
+                trending_flat
+            </i>Opera.html</a></li>
+            <li><a href="opera2.html"><i class="material-icons">
+                keyboard_backspace
+            </i>Opera2.html</a></li>
+        </ul><br>
+
+        <img src="music.jpg" alt="music">
+
 
 </body>
 
