--- a/opera2.html
+++ b/opera2.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>And the show goes on</title>
     <link rel="stylesheet" href="gs.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
     My broken heart,
     Is thine, my own, for aye!
     Is thine, is thine, my own,
-    Is thine, for aye! <br>
+    Is thine, for aye! <br><br>
 
     <table>
         <thead>
@@ -68,7 +69,17 @@
         </tbody>
     </table> <br>
 
-    <a href="opera.html">Opera.html</a>
+    <a href="opera.html">Opera.html</a> <br> <br>
+    <ul>
+        <li><a href="opera.html"><i class="material-icons">
+            trending_flat
+        </i>Opera.html</a></li>
+        <li><a href="opera2.html"><i class="material-icons">
+            keyboard_backspace
+        </i>Opera2.html</a></li>
+    </ul> <br>
+
+    <img src="music.jpg" alt="music">
 
 
 </body>
