--- a/opera.html
+++ b/opera.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S555089 Assignment 4</title>
+    <title>S555089 Assignment 4 New</title>
     <link rel="stylesheet" href="gs.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
