added a new h2 line

--- a/opera.html
+++ b/opera.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Nuli Swathi Productions LTD.</h1>
     <h3>The Yeoman of the Guard </h3>
+    <h2>Example line added for merge demo</h2>
     <h5>Act II <br>
         SCENE.— The same— Moonlight.Two days have elapsed.
         WOMEN and YEOMEN of the Guard discovered.
